# MyPDF-Read

./: .gitignore
.github/workflows/: flutter-android-build.yml  release.yml
.hypothesis/constants/: 278039b1dae82974  3c7b4a6cdf0f8694  5fd60d8b8949ad08  7b53aba4d97975f4  7c53d5b90f76e871  abcb72971d9470ff  befdbc73ac812090  dba1c940aca92b70  efd8a12d2984bac9
.hypothesis/examples/04e6b3400353b141/: a1c5d96a0d9b8bae  f9d4a6ea1c0740bf
.hypothesis/examples/a1c5d96a0d9b8bae/: 180a9e06ddd8cc6f  23d6a46d764dfb18  296521022525e1a5  3680012f6ae9b06b  37146bba647c720e  3d5e32f19701b874  3e923a4fad7c76f6  3f1fdcfcbfaee074  43746cd31b9f6463  4487114387d08011  4d07eaeea87cdfb5  4e114fa37dc6f1a9  525d8d6fcce1d672  57de3f2906ebf40b  593a1f0eba10d04e  5b9a4df92c6acbc2  5e1c6e0c7acf83a2  60d1a91d2bf25e43  633a055b7a9cefab  68ea00c3c1e48d59  691cb42cc6fb4be2  72bc85914812e2f9  (+18 more)
.hypothesis/tmp/: tmp71_wu3xi  tmp841k8_c0  tmpwcyuaxxy
huawei_pdf_reader/: pyproject.toml
简体字转化软件/: build.py  pyproject.toml  requirements.txt  word_converter.spec  word_converter_onefile.spec
简体字转化软件/.hypothesis/constants/: 1a2272b85ce0cdd3  3430e144d4afef24  3487dae225d15b51  43d05684c18f15ae  90748b1cec59b946  ea4eaf5f5e780003
简体字转化软件/.kiro/specs/word-traditional-to-simplified/: design.md  requirements.md  tasks.md
简体字转化软件/src/: __init__.py  conversion_manager.py  converter.py  document_processor.py  file_validator.py  main.py  main_window.py
简体字转化软件/tests/: __init__.py  test_conversion_manager.py  test_converter.py  test_document_processor.py  test_file_validator.py  test_integration.py
(+183 files in other folders)
